video/deploy/kubernetes-share/jaeger.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jaeger
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/name: jaeger
    app.kubernetes.io/instance: jaeger
    app.kubernetes.io/component: jaeger-ingress
  name: jaeger
  namespace: jaeger
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /jaeger
        pathType: Prefix
        backend:
          service:
            name: jaeger
            port:
              number: 16686
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: jaeger
    app.kubernetes.io/instance: jaeger
    app.kubernetes.io/component: jaeger-service
  name: jaeger
  namespace: jaeger
spec:
  ports:
  - name: otel-grpc
    port: 4317
    targetPort: otel-grpc
  - name: otel-http
    port: 4318
    targetPort: otel-http
  - name: zipkin
    port: 9411
    targetPort: zipkin
  - name: query
    port: 16686
    targetPort: query
  selector:
    app.kubernetes.io/name: jaeger
    app.kubernetes.io/instance: jaeger
    app.kubernetes.io/component: jaeger-pod
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/name: jaeger
    app.kubernetes.io/instance: jaeger
    app.kubernetes.io/component: jaeger-statefulset
  name: jaeger
  namespace: jaeger
spec:
  replicas: 1
  serviceName: jaeger
  selector:
    matchLabels:
      app.kubernetes.io/name: jaeger
      app.kubernetes.io/instance: jaeger
      app.kubernetes.io/component: jaeger-pod
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jaeger
        app.kubernetes.io/instance: jaeger
        app.kubernetes.io/component: jaeger-pod
      namespace: jaeger
      name: jaeger
    spec:
      containers:
      - name: jaeger
        image: jaegertracing/all-in-one:1.37
        args:
        - --query.base-path=/jaeger
        - --collector.otlp.enabled=true
        - --collector.zipkin.host-port=:9411
        - --badger.ephemeral=true
        - --badger.directory-key=/badger/keys
        - --badger.directory-value=/badger/values
        volumeMounts:
        - name: jaeger-data
          mountPath: /badger
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /
            port: 14269
          initialDelaySeconds: 5
          periodSeconds: 15
        readinessProbe:
          httpGet:
            path: /
            port: 14269
          initialDelaySeconds: 1
        ports:
        - name: otel-grpc
          containerPort: 4317
        - name: otel-http
          containerPort: 4318
        - name: zipkin
          containerPort: 9411
        - name: query
          containerPort: 16686
  volumeClaimTemplates:
  - metadata:
      name: jaeger-data
      labels:
        app.kubernetes.io/name: jaeger
        app.kubernetes.io/instance: jaeger
        app.kubernetes.io/component: jaeger-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 8Gi
